# Anafestica

./: .gitignore  CLAUDE.md  CMakeLists.txt  LIBRARY_DOCUMENTATION.md  QUICK_TOUR.md  README.md  TESTS.md  clean_tests.bat  clear_tests.bat  register_anafestica.bat  register_bds_include_path.ps1  register_fkYAML.bat  test_all.bat
App/: BaseApps.groupproj
App/Fmx/: FmxProject.cbproj  FmxProject.cpp  FormMain.cpp  FormMain.h
App/Vcl/: FormMain.cpp  FormMain.dfm  FormMain.h  VclProject.cbproj  VclProject.cpp
Demo/VCLSimpleDemo/: Project1.cbproj  Project1.cpp  Unit1.cpp  Unit1.dfm  Unit1.h
Test/: main.cpp  runner.cpp  test.cbproj  test.cpp  test.h  test_.cbproj  test_config.cpp  test_config_reference.cpp  test_types.cpp
Test/Shared/: runner.cpp  test_config.cpp  test_config_simplified.cpp  test_migration.cpp  test_node_ops.cpp  test_singleton_version_info.cpp  test_type_mismatch.cpp  test_version.cpp
Test/TestBcc32c/: anafestica_test_bcc32c.cbproj  runner.cpp  test_bcc32c_variant_compat.cpp  test_config.cpp  test_config_simplified.cpp  test_node_ops.cpp  test_types.h
Test/TestBcc64/: README.md  anafestica_test_bcc64.cbproj  test_bcc64_variant_compat.cpp  test_config.cpp  test_config_simplified.cpp  test_node_ops.cpp  test_type_mismatch.cpp
Test/TestBcc64x/: anafestica_test_bcc64x.cbproj  runner.cpp  test_config_simplified.cpp
anafestica/: Cfg.h  CfgBSON.h  CfgBSONCrypt.h  CfgBSONCryptSingleton.h  CfgBSONSingleton.h  CfgConts.h  CfgCrypt.h  CfgIniFile.h  CfgIniFileCrypt.h  CfgIniFileCryptSingleton.h  CfgIniFileSingleton.h  CfgItems.h  CfgJSON.h  CfgJSONCrypt.h  CfgJSONCryptSingleton.h  CfgJSONSingleton.h  CfgNodeValueType.h  CfgRegistry.h  CfgRegistryHModSingleton.h  CfgRegistrySingleton.h  CfgSingletonVersionInfo.h  CfgXML.h  CfgXMLCrypt.h  CfgXMLCryptSingleton.h  CfgXMLSingleton.h  CfgYAML.h  CfgYAMLCrypt.h  CfgYAMLCryptSingleton.h  CfgYAMLSingleton.h  FileVersionInfo.h  Migration.h  PersistFormBase.h  PersistFormVCL.h  PersistFormWinFMX.h  Version.h
docs/assets/images/: class_diagram.dot  render_class_diagram.bat
